# btd6-auto

./: .gitignore  CLAUDE.md  NEXT_PHASES.md  OFFLINE_TEST_README.md  README.md  compare_images.py  config.py  development_roadmap.md  idea.txt  main.py  mvp.md  ocr_screenshots_to_csv.py  overlay_main.py  post_mvp.md  pyproject.toml  pyrightconfig.json  pytorch_requirements.txt  requirements.txt  run_automation.cmd  run_automation_overlay.cmd  run_overlay_tests.cmd  run_tests.sh  tests_run.cmd
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
.github/prompts/: python.prompt.md
.windsurf/rules/: code-style-guide.md
btd6_auto/: __init__.py  actions.py  config.py  config_loader.py  config_utils.py  currency_reader.py  debug_manager.py  exceptions.py  game_launcher.py  hero_manager.py  input.py  logging_utils.py  monkey_hotkey.py  monkey_manager.py  overlay.py  recovery.py  retry_utils.py  state.py  validation.py  vision.py
btd6_auto/configs/: WINDOWS_FILE_CONVENTIONS.md  global.json
btd6_auto/configs/maps/: Monkey Meadow.json  (+22 more)
data/: bloons_all_towers.json  btd6_facts.json  btd6_monkeys.json  btd6_towers.json  monkey_manager_error_handling.md  screenshots_ocr.csv  sequence_and_flowchart.md
tests/: conftest.py  create_test_images.py  mouse_pointer.py  test_actions.py  test_actions_costs.py  test_config.py  test_config_loader.py  test_config_loader_map_filenames.py  test_currency_reader.py  test_debug_image_saving.py  test_debug_manager.py  test_debug_mode_dxgi.py  test_exceptions.py  test_image_compare.py  test_input.py  test_integration.py  test_logging.py  test_monkey_hotkey.py  test_monkey_manager.py  test_overlay.py  test_performance.py  test_recovery.py  test_rect_to_region.py  test_retry.py  test_retry_performance.py  test_run_upgrade_action_fixes.py  test_template_matching.py  test_tower_positions.py  test_try_targeting_success.py  test_upgrade_actions.py  test_validation.py  test_vision.py  test_vision_capture_screen.py  test_vision_currency_reader.py  test_vision_find_element.py  test_vision_set_round_state.py
tests/test_data/: coordinates.py
(+3 files in other folders)
