[project]
name = "btd6-auto"
version = "0.3.0"
description = "Automation bot for Bloons Tower Defense 6 (BTD6) on Windows"
requires-python = ">=3.12"
dependencies = [
  "pyautogui>=0.9.54",
  "opencv-python",
  "numpy>=2.0,<3.0",
  "Pillow>=11.3.0",
  "pyscreeze",
  "pynput",
  "pygetwindow",
  "keyboard",
  "pywin32>=311",
  "bettercam>=1.0.0",
  "pytesseract>=0.3.13",
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.8",
]
